fixed redis helm chart bug

--- a/values-redis-exporter.yaml
+++ b/values-redis-exporter.yaml
@@ -1,5 +1,6 @@
-redis:
-  uri: "redis://redis-master:6379"
+# redis:
+#   uri: "redis://redis-master:6379"
+redisAddress: redis://redis-master:6379
 
 serviceMonitor:
   enabled: true
